--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>VSCode 拡張機能で始めるWeb開発 - 初心者向けマニュアル</h1>
+    <h1>VSCode 拡張機能で始めるWeb開発 </h1>
     <p>このマニュアルは、VSCodeの拡張機能を使ってWeb開発を始めるための初心者向けガイドです。</p>
     
 
